# pillar-kata-roman-numeral-calculator

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac  copyright  do-everything.sh  libtool  requirements-dev.txt  roman.py
application/: Makefile
application/src/: computator.c  computator.h
application/tests/: check_computator.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
demo-program/: Makefile  README.md  do-everything.sh
demo-program/src/: computator.c  computator.h
demo-program/tests/: check_computator.c
src/: CMakeLists.txt  Makefile  Makefile.in  libroman.la  main  main.c  roman.c  roman.h  roman.lo
src/.deps/: main.Po  roman.Plo
src/.libs/: libroman.la  libroman.lai  libroman.so.0  libroman.so.0.0.0  main
tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  check_roman  check_roman.c  test_roman.py
tests/.deps/: check_roman-check_roman.Po
tests/.libs/: check_roman  lt-check_roman
